--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,80 @@
 button{
 	width: 160px;
 	height: 32px;
+	background-color: #52a5ff;
+	color: white;
+	border-radius: 10px;
+	border: 1px;
+}
+button:hover{
+	box-shadow: 2px 2px rgba(0,0,0,0.4);
 }
 textarea{
 	width: 360px;
+	height: 180px;
+	border-bottom-style: solid;
+	border-bottom-color: #52a5ff;
+	border-bottom-width: 2px;
+	border-color: #52a5ff;
+	border-radius: 4px;
+	border-width: 2px;
+}
+#room-name{
+	width: 100%;
+	border-bottom-style: solid;
+	border-bottom-color: #52a5ff;
+	border-bottom-width: 2px;
+	border-style: solid;
+	border-color: #52a5ff;
+	border-radius: 4px;
+	border-width: 2px;
+	font-size: 24px;
+}
+video{
+	width: 480px;
+	height: 360px;
+}
+#my-video{
+	width: 360px;
 	height: 240px;
+}
+#input-roomname{
+	width: 240px;
+}
+#enter-button{
+	width: 160px;
+	height: 32px;
+	width: 100%;
+	margin-top: 4px;
+}
+#high{
+	width: 180px;
+	height: 52px;
+	margin: 4px;
+}
+#mid{
+	width: 180px;
+	height: 52px;
+	margin: 4px;
+}
+#low{
+	width: 180px;
+	height: 52px;
+	margin: 4px;
+}
+#exit-button{
+	float: right;
+}
+#send-button{
+	float: right;
+}
+
+#text-area{
+	position: fixed;
+	top: 4px;
+	right: 4px;
+}
+
+#receive-msg{
+	overflow-y: auto;
 }
